hono setup done

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/backend": "^1.21.4",
     "@clerk/nextjs": "^6.9.6",
+    "@hono/clerk-auth": "^2.0.0",
+    "@hono/zod-validator": "^0.4.2",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
@@ -43,6 +46,7 @@
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.1",
+    "hono": "^4.6.16",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.469.0",
     "next": "14.2.7",
