--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:generate":"drizzle-kit generate:pg --schema db/schema.ts --out ./drizzle",
-    "db:migrate":"bun ./scripts/migrate.ts",
-    "db:studio":"drizzle-kit studio"
+    "db:generate": "drizzle-kit generate:pg --schema db/schema.ts --out ./drizzle",
+    "db:migrate": "bun ./scripts/migrate.ts",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@clerk/backend": "^1.21.4",
@@ -45,6 +45,7 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@tanstack/react-query": "^5.63.0",
     "@types/pg": "^8.11.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
