--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hono/zod-validator": "^0.4.2",
     "@hookform/resolvers": "^3.9.1",
     "@neondatabase/serverless": "^0.10.4",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
@@ -52,6 +53,7 @@
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "drizzle-orm": "0.30.10",
+    "drizzle-zod": "0.5.1",
     "embla-carousel-react": "^8.5.1",
     "hono": "^4.6.16",
     "input-otp": "^1.4.2",
@@ -70,7 +72,8 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
