--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@tanstack/react-query": "^5.63.0",
+    "@tanstack/react-table": "^8.20.6",
     "@types/pg": "^8.11.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
