--- a/package.json
+++ b/package.json
@@ -63,10 +63,12 @@
     "next-themes": "^0.4.4",
     "pg": "^8.13.1",
     "react": "^18",
+    "react-currency-input-field": "^3.9.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
+    "react-select": "^5.9.0",
     "react-use": "^17.6.0",
     "recharts": "^2.15.0",
     "sonner": "^1.7.1",
