--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "next": "14.2.7",
     "next-themes": "^0.4.4",
     "pg": "^8.13.1",
+    "query-string": "^9.1.1",
     "react": "^18",
     "react-countup": "^6.5.3",
     "react-currency-input-field": "^3.9.0",
